[package]
name = "actix-treblle"
version = "4.0.1"
authors = [
    "Tibor Hudik <tibor@barrage.net>",
    "Matej Zagar <matej.zagar@barrage.net>",
]
edition = "2018"
license = "MIT"
keywords = ["treblle", "actix", "middleware"]
description = "Treblle makes it super easy to understand what's going on with your APIs and the apps that use them."
homepage = "https://www.treblle.com"
repository = "https://github.com/barrage/actix-treblle"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4", default-features = false }
actix-http = "3"
serde = { version = "1.0.118", features = ["serde_derive"] }
serde_json = "1.0.60"
futures = "0.3.4"
futures-util = "0.3.21"
chrono = { version = "0.4.19" }
rustc_version_runtime = "0.2.1"
log = "0.4.11"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1" }
